--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,9 +46,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.7"
+            android:background="@drawable/back"
+            android:onClick="mOnClickPDADD"
             android:text="품목추가"
-            android:textSize="25dp"
-            android:background="@drawable/back"/>
+            android:textSize="25dp" />
     </LinearLayout>
 
     <!-- <LinearLayout
